# Receiver-Application

./: .gitignore  CMakeLists.txt  README.md
header/: Receiver.h  ReceiverPipelineMgr.h
resource/: ReceiverApp.ini
src/: ReceiverMain.cpp  ReceiverPipelineMgr.cpp
